bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__apply_patch_manual_flow_history_approved.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: lines_to_single_string(&approved_lines)
---
• Added foo.txt (+1 -0)
    1 +hello
