bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__approval_modal_patch.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---

                                                                                
  Would you like to make the following edits?                                   
                                                                                
  Reason: The model wants to apply changes                                      
                                                                                
  README.md (+2 -0)                                                             
                                                                                
    1 +hello                                                                    
    2 +world                                                                    
                                                                                
› 1. Yes, proceed (y)                                                           
  2. Yes, and don't ask again for these files (a)                               
  3. No, and tell Chaos what to do differently (esc)                            
                                                                                
  Press enter to confirm or esc to cancel
