bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__chat_small_idle_h1.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
