bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__chat_small_running_h3.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
