bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__chatwidget_markdown_code_blocks_vt100_snapshot.snap
---
source: bin/console/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---
"
C
:
\
\
P
r
o
g
r
a
m
F
i
l
e
s
\
\
A
p
p
"
,

"
r
e
g
e
x
"
:
"
^
f
o
o
.
*
(
b
a
r
)
?
$
"
 
}
