bin/console/src/chatwidget/snapshots/chaos_console__chatwidget__tests__chatwidget_tall.snap
---
source: bin/xserver/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---

